[package]
name = "api_typer"
version = "0.2.0"
authors = ["Kris Scott <kscott91@gmail.com>"]
edition = "2018"
description = "Tool for generating types and serializer/deserializer functions"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
polymorphio = { git = "https://github.com/krscott/polymorphio.git", tag = "v0.1.2"}
structopt = "0.3"
log = "0.4"
stderrlog = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"